--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html><html><head><link rel="stylesheet" href="./components.chunk.css"><link rel="stylesheet" href="./umi.css"><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no"><!-- <link rel="stylesheet/less" type="text/css" href="https://ant.design/color.less">
     <script type="text/javascript" src="https://gw.alipayobjects.com/os/lib/less/3.10.3/dist/less.min.js"></script> --><!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,400i,600,700"> --><script src="./env.js"></script><script>window.routerBase = "/";</script>
     <script src="env.js"></script>
-</head><body><style type="text/css">
-    #YL_curtain_ad { width:960px; padding:0; margin:0 auto; overflow:hidden; height:200px; display: none; position:relative;}
-    #YL_curtain_ad span { padding:2px 5px; font:bold 12px/1.5 'sans-serif'; position:absolute; right:5px; bottom:5px; border:#EEE 1px solid; background: #FFF; z-index: 10;}
-    #YL_curtain_ad div{ display:none;}
-</style>
+</head><body>
 <div id="YL_curtain_ad">
     <div id="YL_clos_div"><span onclick="closetopad()">Close</span></div>
     <div class="alert alert-info" style="text-align:center; margin-bottom: 0px;"><p class="mb-0 font-w700">小强VPN仅用于学习交流，请勿违反国家相关法律法规 id="YL_AD_IMG" /></p>
