--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div id="YL_curtain_ad">
     <div id="YL_clos_div"><span onclick="closetopad()">Close</span></div>
     <div class="alert alert-info" style="text-align:center; margin-bottom: 0px;"><p class="mb-0 font-w700">小强VPN仅用于学习交流，请勿违反国家相关法律法规 id="YL_AD_IMG" </p>
-    </div></div>><div id="root"></div><!-- Global site tag (gtag.js) - Google Analytics --><script async src="https://www.googletagmanager.com/gtag/js?id=G-P1E9Z5LRRK"></script><script>window.dataLayer = window.dataLayer || [];
+    </div></div><div id="root"></div><!-- Global site tag (gtag.js) - Google Analytics --><script async src="https://www.googletagmanager.com/gtag/js?id=G-P1E9Z5LRRK"></script><script>window.dataLayer = window.dataLayer || [];
 
   function gtag () {
     dataLayer.push(arguments);
