--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><link rel="stylesheet" href="./components.chunk.css"><link rel="stylesheet" href="./umi.css"><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no"><!-- <link rel="stylesheet/less" type="text/css" href="https://ant.design/color.less">
+<!DOCTYPE html><html><head><link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/xqvpn/xqvpn.github.io@main/components.chunk.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/xqvpn/xqvpn.github.io@main/umi.css"><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no"><!-- <link rel="stylesheet/less" type="text/css" href="https://ant.design/color.less">
     <script type="text/javascript" src="https://gw.alipayobjects.com/os/lib/less/3.10.3/dist/less.min.js"></script> --><!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,400i,600,700"> --><script src="./env.js"></script><script>window.routerBase = "/";</script></head><body><div class="alert alert-info" style="text-align:center; margin-bottom: 0px;"><p class="mb-0 font-w700">小强VPN仅用于学习交流，请勿违反国家相关法律法规</p></div><div id="root"></div><!-- Global site tag (gtag.js) - Google Analytics --><script async src="https://www.googletagmanager.com/gtag/js?id=G-P1E9Z5LRRK"></script><script>window.dataLayer = window.dataLayer || [];
 
   function gtag () {
@@ -7,7 +7,7 @@
 
   gtag('js', new Date());
 
-  gtag('config', 'G-P1E9Z5LRRK');</script><script src="./vendors.async.js"></script><script src="./components.async.js"></script><script src="./umi.js"></script><script type="text/javascript">
+  gtag('config', 'G-P1E9Z5LRRK');</script><script src="https://cdn.jsdelivr.net/gh/xqvpn/xqvpn.github.io@main/vendors.async.js"></script><script src="https://cdn.jsdelivr.net/gh/xqvpn/xqvpn.github.io@main/components.async.js"></script><script src="https://cdn.jsdelivr.net/gh/xqvpn/xqvpn.github.io@main/umi.js"></script><script type="text/javascript">
     var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
     (function(){
         var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
